--- a/Решения/s3_lab01.ipynb
+++ b/Решения/s3_lab01.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "6738e0b9",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n"
+      "1\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "77ec57e7",
    "metadata": {
     "scrolled": true
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "110e0498",
    "metadata": {},
    "outputs": [
@@ -186,10 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "fd75a827",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "ans = 0\n",
     "for i in range(0, n + 1):\n",
@@ -229,15 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "434b9fad",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/igor/Desktop/skolkovo-bba/informatics3/Решения/s3_lab01.ipynb Ячейка 18\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/igor/Desktop/skolkovo-bba/informatics3/%D0%A0%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F/s3_lab01.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m())\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/igor/Desktop/skolkovo-bba/informatics3/%D0%A0%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F/s3_lab01.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m b \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m()) \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/igor/Desktop/skolkovo-bba/informatics3/%D0%A0%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F/s3_lab01.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwhile\u001b[39;00m a \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3a355fca",
    "metadata": {},
    "outputs": [
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8243f5d3",
    "metadata": {},
    "outputs": [
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7a4e5956",
    "metadata": {
     "scrolled": true
@@ -384,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "51d23850",
    "metadata": {},
    "outputs": [],
@@ -394,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +415,7 @@
        "9"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 7, 98, 98, 98]"
+       "[1, 4, 7]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98]"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 98]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98"
+       "[1, 2, 3, 4, 5, 6, 8, 9, 98]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "1"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 98, 98, 98, 98, 98, 98, 98, 98, 98]"
+       "[1, 2, 3, 4, 5, 6, 8, 9, 98]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0b7bb7ab",
    "metadata": {},
    "outputs": [
@@ -547,17 +559,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "неотсортированный список: [81, 95, 84, 99, 82, 53, 7, 82, 5, 93, 43, 88, 76, 61, 75, 46, 97, 70, 37, 53, 46, 82, 65, 2, 83, 1, 47, 32, 27, 64, 17, 92, 49, 36, 72, 28, 72, 49, 30, 7, 16, 6, 88, 94, 31, 33, 22, 72, 72, 20]\n",
-      "отсортированный список: [1, 2, 5, 6, 7, 7, 16, 17, 20, 22, 27, 28, 30, 31, 32, 33, 36, 37, 43, 46, 46, 47, 49, 49, 53, 53, 61, 64, 65, 70, 72, 72, 72, 72, 75, 76, 81, 82, 82, 82, 83, 84, 88, 88, 92, 93, 94, 95, 97, 99]\n"
+      "неотсортированный список: [48, 13, 27, 33, 67, 71, 7, 37, 15, 40, 1, 70, 15, 44, 69, 36, 1, 69, 72, 9, 81, 65, 98, 51, 73, 92, 39, 79, 16, 92, 33, 64, 24, 5, 85, 47, 49, 4, 91, 69, 62, 77, 93, 58, 89, 35, 86, 90, 99, 91]\n",
+      "отсортированный список: [1, 1, 4, 5, 7, 9, 13, 15, 15, 16, 24, 27, 33, 33, 35, 36, 37, 39, 40, 44, 47, 48, 49, 51, 58, 62, 64, 65, 67, 69, 69, 69, 70, 71, 72, 73, 77, 79, 81, 85, 86, 89, 90, 91, 91, 92, 92, 93, 98, 99]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "764"
+       "416"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "177e2121",
    "metadata": {},
    "outputs": [
@@ -641,7 +653,7 @@
        "'ewfwefewfwef'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +674,7 @@
        "'ewfweftrerte'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +694,7 @@
        "'f'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +714,7 @@
        "'ew'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "2c8ffbbf",
    "metadata": {},
    "outputs": [
@@ -732,7 +744,7 @@
        "False"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "34c85f7b",
    "metadata": {
     "scrolled": false
@@ -761,8 +773,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "Не палиндромом\n"
+      "Палиндромом\n"
      ]
     }
    ],
@@ -802,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "6ae2a56f",
    "metadata": {},
    "outputs": [
@@ -810,7 +821,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "3\n"
      ]
     }
    ],
@@ -838,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "7df73337",
    "metadata": {},
    "outputs": [
@@ -879,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "51d9ee8f",
    "metadata": {},
    "outputs": [
@@ -937,7 +948,15 @@
    "execution_count": null,
    "id": "3aa074b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30, 56, 27, 48, 78, 19, 45, 64, 72, 71, 64, 89, 77, 38, 91, 40, 72, 83, 49, 79, 85, 28, 77, 18, 74, 6, 96, 18, 39, 25, 11, 7, 51, 76, 46, 64, 25, 11, 64, 91, 68, 6, 78, 53, 90, 98, 49, 98, 24, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "n = 50\n",
@@ -946,7 +965,29 @@
     "for i in range(n):\n",
     "    a.append(randint(1, 100))\n",
     "print(a)\n",
-    "# ваша сортировка:"
+    "# ваша сортировка:\n",
+    "def merge(A, B):\n",
+    "    C = [] \n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    while i < len(A) and j < len(B):\n",
+    "        if A[i] <= B[j]:\n",
+    "            C.append(A[i]) \n",
+    "            i += 1 \n",
+    "        else:\n",
+    "            C.append(B[j]) \n",
+    "            j += 1 \n",
+    "    C += A[i:] + B[j:] \n",
+    "    return C\n",
+    "\n",
+    "def merge_sort(A): \n",
+    "    if len(A) <= 1: \n",
+    "        return A \n",
+    "    else:\n",
+    "        LA = A[:len(A) // 2] \n",
+    "        RA = A[len(A) // 2:] \n",
+    "    return merge(merge_sort(LA), merge_sort(RA))\n",
+    "print(merge_sort(a))"
    ]
   },
   {
@@ -991,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "9433d5b5",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1042,7 @@
        "str"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3ad8af58",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1066,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "map выполняется за: 19.74245047569275\n"
+      "map выполняется за: 0.059126853942871094\n"
      ]
     }
    ],
@@ -1049,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "9dde43bb",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1098,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63.8 ms ± 321 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "63.6 ms ± 1.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1068,14 +1109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73.1 ms ± 714 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "70 ms ± 907 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1108,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c4e15201",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6111ed1f",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3, 4, 5, 6}\n"
+      "{1, 2}\n"
      ]
     }
    ],
@@ -1150,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cecb0f46",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "290379d5",
    "metadata": {
     "scrolled": true
@@ -1213,17 +1254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "5f2be9c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,17 +1285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "cdfb835d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 5]"
+       "[]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "544285da",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "63bcf575",
    "metadata": {},
    "outputs": [],
@@ -1364,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "59d3f9ae",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1417,7 @@
        " [0, 2, 5, 5, 5, 6, 5, 8, 8, 8]]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "27672351",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "149ca107",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "518558c2",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6f73f52a",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "40d6489b",
    "metadata": {},
    "outputs": [],
@@ -1572,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "7801a572",
    "metadata": {},
    "outputs": [
@@ -1606,7 +1647,7 @@
        " (8, 0)]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
