--- a/Решения/s3_lab07.ipynb
+++ b/Решения/s3_lab07.ipynb
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {
         "id": "dqtlj8-CJ4Eh"
       },
@@ -249,10 +249,10 @@
         {
           "data": {
             "text/plain": [
-              "array([5, 6, 4, 5, 6, 5, 4, 6, 6, 7, 3, 8, 7, 6, 7])"
+              "array([ 8,  6,  7,  9,  9,  3,  1,  7,  6,  4,  7, 10,  6,  6,  9])"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -265,42 +265,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.3"
+              "6.533333333333333"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "bernoulli(p=0.3).mean() # расчитаем матожидание данной случайной величины"
+        "b.mean() # расчитаем матожидание данной случайной величины"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.21"
+              "5.582222222222223"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "bernoulli(p=0.3).var() # расчитаем дисперсию данной случайной величины"
+        "b.var() # расчитаем дисперсию данной случайной величины"
       ]
     },
     {
