--- a/Решения/s3_lab03.ipynb
+++ b/Решения/s3_lab03.ipynb
@@ -153,7 +153,7 @@
       "a: [0. 0. 0. 0. 0.]\n",
       "b: [[0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
-      "r: [0.58502831 0.92317188 0.44449126 0.16176151 0.2240146 ]\n"
+      "r: [0.2558899  0.27561329 0.87336383 0.94917051 0.72518554]\n"
      ]
     }
    ],
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "K = a +273\n",
+    "K = a + 273\n",
     "print(K)\n",
     "F = a + 32\n",
     "print(F)\n"
@@ -744,16 +744,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1.]\n",
-      " [1. 1. 1.]\n",
-      " [1. 1. 1.]\n",
-      " [1. 1. 1.]\n",
-      " [1. 1. 1.]]\n",
-      "[[1. 1. 1.]\n",
-      " [1. 0. 1.]\n",
-      " [1. 0. 1.]\n",
-      " [1. 0. 1.]\n",
-      " [1. 1. 1.]]\n"
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n"
      ]
     }
    ],
@@ -1208,7 +1202,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Нет\n"
+      "2.7015621187164243\n",
+      "-3.7015621187164243\n"
      ]
     }
    ],
@@ -1383,23 +1378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 3 0 2 3 2 1 2 2 2]\n",
-      " [2 2 1 2 1 0 3 0 0 1]\n",
-      " [0 0 1 2 3 0 0 0 3 3]\n",
-      " [1 0 2 1 2 2 0 3 0 2]]\n",
-      "False\n"
+      "[0]\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "Z = np.random.randint(0,4,(4,10))\n",
+    "Z = np.array([(0)])\n",
     "print(Z)\n",
     "print((~Z.any(axis=0)).any())"
    ]
@@ -1424,8 +1417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 0 1 1 1 0 1 3 3 3]\n",
-      "1\n"
+      "[3 2 0 2 2 0 3 1 3 1]\n",
+      "2\n"
      ]
     }
    ],
@@ -1433,53 +1426,7 @@
     "Z = np.random.randint(0,4,10)\n",
     "print(Z)\n",
     "counts = np.bincount(Z)\n",
-    "print(np.argmax(counts))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "317734a2",
-   "metadata": {},
-   "source": [
-    "### Задача 13"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Z = np.random.randint(0,4,10)\n",
-    "print(Z)\n",
-    "counts = np.bincount(Z)\n",
-    "print(np.argmax(counts))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f343be79",
-   "metadata": {},
-   "source": [
-    "Найдите наиболее частое значение в массиве."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "1c3fc8ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "?\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('?')\n"
+    "print(np.argmax(counts))"
    ]
   },
   {
@@ -1494,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "9c96a0d1",
    "metadata": {},
    "outputs": [],
@@ -1551,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "61996b01",
    "metadata": {},
    "outputs": [
@@ -1559,8 +1506,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0]\n",
-      " [6 3]]\n"
+      "[[ 62 114]\n",
+      " [  0   5]]\n"
      ]
     }
    ],
